# dist-mbrl

./: .gitignore  README.md  environment.yml  pyproject.toml  thirdparty_licenses.md
data/: dmc_action_cost.pkl  dmc_main.pkl  dmc_num_quantiles_mean.pkl  dmc_num_quantiles_ofu.pkl  dmc_num_samples.pkl  dmc_qrmbpo_investigation.pkl  dmc_quantile_optimism.pkl  dmc_retain_epochs.pkl  dmc_rollout_length.pkl  dmc_scores.txt  mountaincar.pkl  nroom_policy.pkl
data/trained_mountaincar_checkpoints/: agent_10.pth  agent_11.pth  agent_12.pth  agent_4.pth  agent_5.pth
dist_mbrl/agents/: __init__.py  actor.py  base.py  critic.py  eqrsac.py  qrsac.py  qusac.py  sac.py  util.py
dist_mbrl/config/: __init__.py  default.py  mbrl_lib.yaml
dist_mbrl/envs/: action_cost_wrapper.py  tabular.py  term_fns.py  toy_mdp.py
dist_mbrl/mbrl/: LICENSE
dist_mbrl/mbrl/env/: __init__.py
dist_mbrl/mbrl/models/: __init__.py  basic_ensemble.py  gaussian_mlp.py  model.py  model_env.py  model_trainer.py  one_dim_tr_model.py  util.py
dist_mbrl/mbrl/planning/: __init__.py  core.py
dist_mbrl/mbrl/util/: __init__.py  common.py  math.py  replay_buffer.py
dist_mbrl/tabular/: config.py  nroom_record_opt_policy.py  posterior.py  util.py
dist_mbrl/tabular/agents/: __init__.py  psrl_agent.py  tabular_agent.py
dist_mbrl/train/: train.py
dist_mbrl/utils/: common.py  data_collection.py  plot.py  process_results.py  video.py
docker/: Dockerfile  build_docker.sh  test_install.sh
notebooks/: dmc_action_cost.ipynb  dmc_main.ipynb  dmc_num_quantiles.ipynb  dmc_num_samples.ipynb  dmc_qrmbpo_investigation.ipynb  dmc_quantile_optimism.ipynb  dmc_retain_updates.ipynb  dmc_rollout_length.ipynb  mountaincar_main.ipynb  mountaincar_value_viz.ipynb  tabular_eqr_performance.ipynb  tabular_example_value_distribution.ipynb  tabular_nroom.ipynb  tabular_qr_loss.ipynb
